# Default-VSC-Python-Project-Setup

./: .envrc.sample  .gitignore  README.md  logging_setup.py  mypy.cfg  pyproject.toml  requirements.txt  settings.json  vscode.txt
src/template/: __init__.py  __main__.py  example.py
src/template/sub_module/: example_2.py
tests/: test_template.py
