# Replace all instances of template with your project name
[tool.poetry]
name = "template"

include = ["src/template/py.typed"]

version = "0.1.0"
description = ""
authors = ["Joaquim Esteves <joaquimbve@hotmail.com>"]
license = "GPL-3.0-only"
homepage = "https://github.com/JoaquimEsteves/template"
readme = "README.md"

classifiers = ["Typing :: Typed"]

[tool.poetry.scripts]
main = "template__main__:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flakehell = "^0.7.0"
ipython = "^8.10.0"
isort = "^5.6.4"
mypy = "^0.790"
mypy-extensions = "^0.4.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flakehell]
max_line_length = 80
show_source = true

[tool.flakehell.plugins]
mccabe = ["+*"]
pycodestyle = ["+*"]
# https://black.readthedocs.io/en/stable/compatible_configs.html#flake8
pyflakes = ["+*", "-E203", "-E501", "-W503"]
# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
pylint = ["+*", "-C0330", "-CC0326"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
